1. Add auto count people 2. When people are few, accept all talk 3. When people are few, automatically start talk